Support Kotlin default parameters